# ScholarFetch

./: .gitignore  CLAUDE.md  CODEX_CHANGES.md  PHASE_2_SUMMARY.md  README.md  pyproject.toml  requirements.txt
docs/: workflow.md
docs/superpowers/plans/: 2026-04-02-doi-oa-resolvers.md  2026-04-02-openalex-download-recovery.md  2026-04-03-query-intent-openreview-evaluation.md  (+1 more)
nexus_paper_fetcher/: cli.py  config.py  dedup.py  domain.py  evaluation.py  methodology.py  models.py  nlp.py  pipeline.py  search.py  slugs.py  workflow.py
nexus_paper_fetcher/download/: cli.py  downloader.py  ezproxy.py  manifest.py  manual.py  pipeline.py  progress.py
nexus_paper_fetcher/fetchers/: base.py  openalex.py  openreview.py  semantic_scholar.py
nexus_paper_fetcher/scoring/: citation.py  recency.py  relevance.py  scorer.py  venue.py
scholar_fetch/: cli.py  config.py  dedup.py  domain.py  evaluation.py  methodology.py  nlp.py  pipeline.py  search.py  workflow.py
scholar_fetch/data/: venues.yaml
scholar_fetch/download/: cli.py  downloader.py  manifest.py  manual.py  pipeline.py
scholar_fetch/fetchers/: base.py  openalex.py  openreview.py  semantic_scholar.py
scholar_fetch/scoring/: relevance.py  scorer.py
tests/: conftest.py  test_cli.py  test_dedup.py  test_domain.py  test_fetchers.py  test_methodology.py  test_models.py  test_nlp.py  test_pipeline.py  test_scoring.py  test_search.py  test_slugs.py  test_workflow.py
tests/test_download/: conftest.py  constants.py  test_downloader.py  test_ezproxy.py  test_manifest.py  test_manual.py  test_pipeline.py  test_progress.py
(+3 files in other folders)
