[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-paper-fetcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.30",
    "pydantic>=2.7",
    "typer>=0.12",
    "rapidfuzz>=3.9",
    "tenacity>=9.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.scripts]
nexus = "nexus_paper_fetcher.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_paper_fetcher*"]

[tool.setuptools.package-data]
nexus_paper_fetcher = ["data/*.yaml"]
